--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   color-scheme: light dark;
-  background-color: #05000e;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
