--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,20 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+
   padding: 0;
-  margin: 0;
+
+  width: 100%;
+  background-clip: border-box;
 
   color-scheme: light dark;
-  background-color: #ffffff;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(#00bbd8, #162547);
 }
 
 a {
   text-decoration: none;
   color: white;
+}
+
+.app {
+  width: auto;
 }
